Add forecast flow, standardize label sizes

--- a/.trmnlp.yml
+++ b/.trmnlp.yml
@@ -8,8 +8,8 @@ watch:
 
 # values of custom fields (defined in src/settings.yml)
 custom_fields: {
-  # nwps_gauge_id: NAST1,
-  nwps_gauge_id: ATOT2,
+  nwps_gauge_id: NAST1,
+  # nwps_gauge_id: ATOT2,
   nwps_history_days: 7
 }
 
