--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,7 +29,7 @@ jobs:
         run: gem install trmnl_preview
 
       - name: Run trmnlp build
-        run: bundle exec trmnlp build
+        run: trmnlp build
 
   check-secret:
     name: Check if `TRMNL_API_KEY` set
@@ -171,4 +171,4 @@ jobs:
       - name: Run trmnlp push
         run: |
           echo "Deploying version ${{ needs.check-version.outputs.version }}"
-          bundle exec trmnlp push --force
+          trmnlp push --force
